# AdventOfCode2022

./: .gitignore  CMakeLists.txt  LICENSE  README.md
day1/: caclorie_couting.cpp
day10/: cathode_ray_tube.cpp
day11/: monkey_in_the_middle.cpp
day12/: hill_climbing_algorithm.cpp  mat.h
day13/: distress_signal.cpp
day14/: regolith_reservoir.cpp
day15/: beacon_exclusion_zone.cpp
day16/: proboscidea_volcanium.cpp
day17/: input.txt  pyroclastic_flow.cpp
day18/: boiling_boulders.cpp
day19/: not_enough_minerals.cpp
day2/: rock_paper_scissors.cpp
day20/: grove_positioning_system.cpp
day21/: monkey_math.cpp
day22/: monkey_map.cpp  p2.py
day23/: unstable_diffusion.cpp
day24/: blizzard_basin.cpp
day25/: full_of_hot_air.cpp  input.txt
day3/: rucksack_reorganization.cpp
day4/: camp_cleanup.cpp
day5/: supply_stacks.cpp
day6/: tuning_trouble.cpp
day7/: no_space_left_on_device.cpp
day8/: treetop_tree_house.cpp
day9/: rope_bridge.cpp
