cmake_minimum_required(VERSION 3.17)
project(AOC2022)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

function(addExe name src)
    add_executable(${name} ${src})
    math(EXPR lastIndex "${ARGC} - 1")
    if (${ARGC} GREATER 2)
        foreach(index RANGE 2 ${lastIndex})
            target_link_libraries(${name} ${ARGV${index}})
        endforeach()
    endif()
endfunction()

addExe("day_1" day1/caclorie_couting.cpp)
addExe("day_2" day2/rock_paper_scissors.cpp)
addExe("day_3" day3/rucksack_reorganization.cpp)
addExe("day_4" day4/camp_cleanup.cpp)
addExe("day_5" day5/supply_stacks.cpp)
addExe("day_6" day6/tuning_trouble.cpp)
addExe("day_7" day7/no_space_left_on_device.cpp)
addExe("day_8" day8/treetop_tree_house.cpp)